--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
 <h1>
   {{title}}
 </h1>
+
+<radios></radios>
+<checkboxes></checkboxes>
+
+<button (click)="resetCheckboxes()">reset checkboxes</button>
+<button (click)="resetRadios()">reset radios</button>
+
+<h4>Checkboxes Values</h4>
+{{getCheckboxes()}}
+
+<h4>Radios values</h4>
+{{getRadios()}}
