--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,21 @@
-<h1>
-  {{title}}
-</h1>
+<h1>{{title}}</h1>
 
 <radios></radios>
+<button (click)="reset('myRadios')">reset radios</button>
+<h4>Radios values: {{getOutput('myRadios')}}</h4>
+
 <checkboxes></checkboxes>
+<button (click)="toggleVisibility('myCheckboxes','one')">toggle visibility set one</button>
+<button (click)="toggleVisibility('myCheckboxes','two')">toggle visibility set two</button>
+<button (click)="toggleVisibility('myCheckboxes','three')">toggle visibility set three</button>
+<br/>
+<button (click)="reset('myCheckboxes')">reset checkboxes</button>
+<h4>Checkboxes Values: {{getOutput('myCheckboxes')}}</h4>
+
 <my-select [id]="'select1'" [multiple]="true"></my-select>
+<button (click)="reset('select1')">reset multiselect</button>
+<h4>MultiSelect: {{getOutput('select1')}}</h4>
+
 <my-select [id]="'select2'" [multiple]="false"></my-select>
-
-<button (click)="resetCheckboxes()">reset checkboxes</button>
-<button (click)="resetRadios()">reset radios</button>
-<button (click)="resetSelect('select1')">reset multiselect</button>
-<button (click)="resetSelect('select2')">reset select</button>
-
-<h4>Checkboxes Values</h4>
-{{getCheckboxes()}}
-
-<h4>Radios values</h4>
-{{getRadios()}}
-
-<h4>MultiSelect</h4>
-{{getSelect('select1')}}
-
-<h4>Select</h4>
-{{getSelect('select2')}}
+<button (click)="reset('select2')">reset select</button>
+<h4>Select: {{getOutput('select2')}}</h4>
