--- a/src/app/radios/radios.component.html
+++ b/src/app/radios/radios.component.html
@@ -1,6 +1,9 @@
 <fieldset>
   <h4>Radios</h4>
   <label *ngFor="let value of values.getinputValues()">
-  <input type="radio" name="radio" (click)="values.setSingleValue(value.getValue())" [checked]="value.value === values.getOutputValues()[0]"> {{value.getLabel()}}
+    <input type="radio" 
+    name="radio" 
+    (click)="updateValue(value)" 
+    [checked]="isChecked(value)"> {{value.getLabel()}}
 </label>
 </fieldset>
