--- a/src/app/checkboxes/checkboxes.component.html
+++ b/src/app/checkboxes/checkboxes.component.html
@@ -1,7 +1,10 @@
 <fieldset>
   <h4>Checkboxes</h4>
-  <button (click)=toggle() [innerText]="allChecked() ? 'Uncheck All' : 'Check All'"></button>
+  <button (click)=toggle() [innerText]="getButtonText()"></button>
   <label *ngFor="let value of values">
-    <span *ngIf="value.visible"><input type="checkbox" [(ngModel)]="value.current" [disabled]="!value.visible"> {{value.getLabel()}}</span>
+    <span *ngIf="value.visible">
+      <input type="checkbox" 
+      [(ngModel)]="value.current" 
+      [disabled]="!value.visible"> {{value.getLabel()}}</span>
   </label>
 </fieldset>
