--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<nav class="navbar navbar-default">
+  <div class="container">
+    <ul class="nav navbar-nav" (click)="isActive()">
+        <li [class.active]="isActive('/')"> <a [routerLink]="['/']">Basics</a></li>
+        <li [class.active]="isActive('/gallery')"> <a [routerLink]="['/gallery']">Gallery</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
