--- a/src/app/radios/radios.component.html
+++ b/src/app/radios/radios.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <h4>Radios</h4>
+  <h4>{{title}}</h4>
   <label *ngFor="let value of values.getinputValues()">
     <input type="radio" 
     name="radio" 
