--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -2,10 +2,10 @@
   <h4>Select</h4>
   <button class="btn btn-default" (click)="toggle()" *ngIf="multiple" >{{areAllSelected() ? 'Unselect All' : 'Select All'}}</button>
   <select class="form-control" [multiple]="multiple" [(ngModel)]="current" (change)=updateValues()>
-    <option *ngIf="values.getOutputValues() == 'false' && !multiple">Select One</option>
+    <option *ngIf="values.getOutputValues() == 'false' ">Select One</option>
     <option *ngFor="let value of values.getinputValues()" 
     [value]="value.getValue()" 
-    [selected]="values.getOutputValues().indexOf(value.getValue()) !== -1"
+    [selected]="isSelected(value.getValue())"
     >{{value.getLabel()}}</option>
   </select>
 </div>
