--- a/src/app/showroom/showroom.component.html
+++ b/src/app/showroom/showroom.component.html
@@ -2,10 +2,10 @@
   <div class="col-md-12">
     <h1>{{title}}</h1>
 
-    <radios [name]="'myRadios'" [data]="data"></radios>
-    <checkboxes [data]="data" [name]="'myCheckboxes'"></checkboxes>
-    <my-select [name]="'select1'" [data]="data" [multiple]="true"></my-select>
-    <my-select [name]="'select2'" [data]="data" [multiple]="false"></my-select>
+    <radios [title]="'Radios'" [name]="'myRadios'" [data]="data"></radios>
+    <checkboxes [title]="'Checkboxes'" [data]="data" [name]="'myCheckboxes'"></checkboxes>
+    <my-select [title]="'MultiSelect'" [name]="'select1'" [data]="data" [multiple]="true"></my-select>
+    <my-select [title]="'Select'" [name]="'select2'" [data]="data" [multiple]="false"></my-select>
 
     <hr>
 
