--- a/src/app/showroom2/showroom2.component.html
+++ b/src/app/showroom2/showroom2.component.html
@@ -1,5 +1,7 @@
 <reporting-figures></reporting-figures>
-
+<company-type></company-type>
+<lobs></lobs>
+<primary-excess></primary-excess>
 <hr>
 
 <h4>JSON</h4>
