--- a/src/app/showroom/showroom.component.html
+++ b/src/app/showroom/showroom.component.html
@@ -14,6 +14,10 @@
     <h3>JSON</h3>
     {{getJSON()}}
 
+    <hr>
+
+    <h2>External Events</h2>
+
     <h4>Radios values: {{getOutput('myRadios')}}</h4>
     <button (click)="reset('myRadios')">reset radios</button>
 
