--- a/src/app/showroom2/showroom2.component.html
+++ b/src/app/showroom2/showroom2.component.html
@@ -1,8 +1,17 @@
+<p>Date widget missing</p>
 <reporting-figures></reporting-figures>
-<company-type></company-type>
+<p>Type of view missing</p>
+<offices></offices>
+<p>Composed Regions and Countries Missing</p>
+<p>UWs Widget missing</p>
 <lobs></lobs>
 <primary-excess></primary-excess>
-<offices></offices>
+<company-type></company-type>
+<p>Operations Type missing</p>
+<p>Business Type missing</p>
+<p>Extra checkboxes missing</p>
+<button class="btn btn-default">Run Report</button>
+
 <hr>
 
 <h4>JSON</h4>
