--- a/src/app/checkboxes/checkboxes.component.html
+++ b/src/app/checkboxes/checkboxes.component.html
@@ -1,7 +1,7 @@
 <div class="form-group">
   <h4>{{title}}</h4>
   <button class="btn btn-default" (click)=toggle() [innerText]="getButtonText()"></button>
-  <label *ngFor="let value of values.getinputValues()">
+  <label *ngFor="let value of getValues()">
     <span *ngIf="value.visible">
       <input type="checkbox" 
       [(ngModel)]="value.current" 
