refacto of main components

--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -1,7 +1,7 @@
 <div class="form-group">
   <h4>Select</h4>
-  <button class="btn btn-default" (click)="toggle()" *ngIf="multiple" >{{areAllSelected() ? 'Unselect All' : 'Select All'}}</button>
-  <select class="form-control" [multiple]="multiple" [(ngModel)]="current" (change)=updateValues()>
+  <button class="btn btn-default" (click)="toggle()" *ngIf="multiple" >{{getButtonText()}}</button>
+  <select class="form-control" [multiple]="multiple" [(ngModel)]="selectedValues" (change)=updateValues()>
     <option *ngIf="isAnySelected()">Select One</option>
     <option *ngFor="let value of getValues()" 
     [value]="value.getValue()" 
