rerendering components automatically

--- a/src/app/showroom2/showroom2.component.html
+++ b/src/app/showroom2/showroom2.component.html
@@ -15,6 +15,6 @@
 <hr>
 
 <h4>JSON</h4>
-<p>{{formService.getJSON()}}</p>
+<button (click)="getJson()">Update JSON</button><p>{{json}}</p>
 
 <button (click)="forceRefresh()">Refresh All</button>
