--- a/src/app/uw/uw.component.html
+++ b/src/app/uw/uw.component.html
@@ -1,1 +1,1 @@
-<select name="name" data="data" title="title"></select>
+<my-select [name]="name" [data]="data" [title]="title" [multiple]="true"></my-select>
