--- a/src/app/uw/uw.component.html
+++ b/src/app/uw/uw.component.html
@@ -1,1 +1,1 @@
-<my-select [name]="name" [data]="data" [title]="title" [multiple]="true"></my-select>
+<my-select [name]="name" [data]="data" [classes]="'uws'" [title]="title" [multiple]="true"></my-select>
