add more components

--- a/src/app/showroom2/showroom2.component.html
+++ b/src/app/showroom2/showroom2.component.html
@@ -2,7 +2,7 @@
 <reporting-figures></reporting-figures>
 <p>Type of view missing</p>
 <offices></offices>
-<p>Composed Regions and Countries Missing</p>
+<groups-countries-regions></groups-countries-regions>
 <uw></uw>
 <lobs></lobs>
 <primary-excess></primary-excess>
