--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,1 +1,1 @@
-<radios [name]="name" [title]="title" [data]="data"></radios>
+<radios [name]="name" [title]="title" [data]="data" (radiosChange)="onGroupsChange($event)"></radios>
