groups regions countriew widgets

--- a/src/app/regions/regions.component.html
+++ b/src/app/regions/regions.component.html
@@ -1,1 +1,1 @@
-<checkboxes [data]="data" [name]="name" [title]="title"></checkboxes>
+<checkboxes [data]="data" [name]="name" [title]="title" (checkboxesChange)="updateCountries($event)"></checkboxes>
