--- a/src/app/checkboxes/checkboxes.component.html
+++ b/src/app/checkboxes/checkboxes.component.html
@@ -1,10 +1,11 @@
 <div class="form-group">
   <h4>{{title}}</h4>
-  <button class="btn btn-default" (click)=toggle() [innerText]="getButtonText()"></button>
+  <button class="btn btn-default" (click)="toggle()" [innerText]="getButtonText()"></button>
   <label *ngFor="let value of getValues()">
     <span *ngIf="value.visible">
       <input type="checkbox" 
-      [(ngModel)]="value.current" 
+      (click)="updateValue(value)"
+      [checked]="value.current"
       [disabled]="!value.visible"> {{value.getLabel()}}</span>
   </label>
 </div>
