--- a/src/app/showroom2/showroom2.component.html
+++ b/src/app/showroom2/showroom2.component.html
@@ -2,12 +2,12 @@
 <reporting-figures></reporting-figures>
 <p>Type of view missing</p>
 <offices></offices>
-<groups-countries-regions></groups-countries-regions>
-<!--
+<!--groups-countries-regions></groups-countries-regions-->
+
     <groups></groups>
     <regions></regions>
     <countries></countries>
--->
+
 <uw></uw>
 <lobs></lobs>
 <primary-excess></primary-excess>
