--- a/src/app/checkboxes/checkboxes.component.html
+++ b/src/app/checkboxes/checkboxes.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <h4>{{title}}</h4>
-  <button class="btn btn-default" (click)="toggle()" [innerText]="getButtonText()"></button>
+  <button class="btn btn-default btn-xs" (click)="toggle()" [innerText]="getButtonText()"></button><br/>
   <label *ngFor="let value of getValues()">
     <span *ngIf="value.visible">
       <input type="checkbox" 
