--- a/src/app/select/select.component.html
+++ b/src/app/select/select.component.html
@@ -1,6 +1,6 @@
 <div class="form-group">
   <h4>{{title}}</h4>
-  <button class="btn btn-default" (click)="toggle()" *ngIf="multiple" >{{getButtonText()}}</button>
+  <button class="btn btn-default btn-xs" (click)="toggle()" *ngIf="multiple" >{{getButtonText()}}</button>
   <select [class]="'form-control ' + classes" [multiple]="multiple" [(ngModel)]="selectedValues" (change)=updateValues()>
     <option *ngIf="isAnySelected()">Select One</option>
     <option *ngFor="let value of getValues()" 
