--- a/src/app/showroom2/showroom2.component.html
+++ b/src/app/showroom2/showroom2.component.html
@@ -1,5 +1,9 @@
+<form-error [errorMessages]="errorMessages" (hovering)="getHover($event)"></form-error>
+
 <p>Date widget missing</p>
+
 <reporting-figures></reporting-figures>
+
 <p>Type of view missing</p>
 <offices></offices>
 <!--groups-countries-regions></groups-countries-regions-->
@@ -21,5 +25,5 @@
 
 <h4>JSON</h4>
 <button (click)="getJson()">Update JSON</button><p>{{json}}</p>
-
+<button (click)="validate()">Validate</button>
 <button (click)="forceRefresh()">Refresh All</button>
