--- a/src/app/form-error/form-error.component.html
+++ b/src/app/form-error/form-error.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <li (mouseover)="highlight(error.id)" (mouseout)="removeHighlight(error.id)" *ngFor="let error of errorMessages; let i = index">{{error.error}} 
+  <li (mouseover)="highlight(error.id)" 
+  (mouseout)="removeHighlight(error.id)" 
+  *ngFor="let error of errorMessages; let i = index">{{error.error}} 
     <button (click)="removeError(i)">X</button>
   </li>
 </ul>
