--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,21 @@
 <nav class="navbar navbar-default">
-  <div class="container">
-    <ul class="nav navbar-nav" (click)="isActive()">
-        <li [class.active]="isActive('/')"> <a [routerLink]="['/']">Basics</a></li>
-        <li [class.active]="isActive('/gallery')"> <a [routerLink]="['/gallery']">Gallery</a></li>
-    </ul>
-  </div>
+    <div class="container">
+        <ul class="nav navbar-nav" (click)="isActive()">
+            <li [class.active]="isActive('/')"> <a [routerLink]="['/']">Basics</a></li>
+            <li [class.active]="isActive('/gallery')"> <a [routerLink]="['/gallery']">Gallery</a></li>
+            <li><a>Broker Meeting</a></li>
+            <li><a>Fac Out Portfolio</a></li>
+            <li><a>Submission Volume Overview</a></li>
+            <li><a>Portfolio Analysis Report</a></li>
+            <li><a>Underwriting Activity</a></li>
+            <li><a>Claims Activitiy</a></li>
+            <li><a>Claims Volume Overview</a></li>
+            <li><a>Gross Written Premium</a></li>
+            <li><a>Limit Exception</a></li>
+            <li><a>Lloyds Monitoring</a></li>
+            <li><a>Monthly Comparison</a></li>
+        </ul>
+    </div>
 </nav>
 
 <div class="container">
