new reports examples

--- a/src/app/broker-meeting/broker-meeting.component.html
+++ b/src/app/broker-meeting/broker-meeting.component.html
@@ -1,3 +1,9 @@
 <p>
   broker-meeting works!
 </p>
+
+<p>Missing Broker Group</p>
+<p>Missing Broker Widget</p>
+<p>Missing Broker Form Periods?</p>
+
+<offices></offices>
