type of view widget

--- a/src/app/showroom2/showroom2.component.html
+++ b/src/app/showroom2/showroom2.component.html
@@ -5,11 +5,11 @@
 
 <reporting-figures></reporting-figures>
 
-<p>Type of view missing</p>
+<type-of-view></type-of-view>
 <offices></offices>
 <!--groups-countries-regions></groups-countries-regions-->
 
-    <groups></groups>
+    <regions-set></regions-set>
     <regions></regions>
     <countries></countries>
 
