submission volume overview form

--- a/src/app/submission-volume-overview/submission-volume-overview.component.html
+++ b/src/app/submission-volume-overview/submission-volume-overview.component.html
@@ -1,3 +1,11 @@
-<p>
-  submission-volume-overview works!
-</p>
+<p>dates</p>
+<type-of-view></type-of-view>
+<offices></offices>
+<regions-set></regions-set>
+<regions></regions>
+<countries></countries>
+<uws></uws>
+<lobs></lobs>
+<company-type></company-type>
+<p>operations type</p>
+<p>business type</p>
