--- a/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
+++ b/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
@@ -9,3 +9,7 @@
 <company-type></company-type>
 <p>operations type</p>
 <p>business type</p>
+
+<button (click)="getJson()">GetJSON</button>
+
+{{json}}
