--- a/src/app/form-elements/core/checkboxes/checkboxes.component.html
+++ b/src/app/form-elements/core/checkboxes/checkboxes.component.html
@@ -1,11 +1,10 @@
 <div class="form-group">
-  <h4 *ngIf="title">{{title}}</h4>
   <button class="btn btn-default btn-xs" (click)="toggle()" [innerText]="getButtonText()"></button><br/>
-  <label *ngFor="let value of getValues()">
-    <span *ngIf="value.visible">
+  <div style="display:inline" *ngFor="let value of getValues()">
+    <label *ngIf="value.visible">
       <input type="checkbox" 
       (click)="updateValue(value)"
       [checked]="value.current"
-      [disabled]="!value.visible"> {{value.getLabel()}}</span>
-  </label>
+      [disabled]="!value.visible"> {{value.getLabel()}}</label>
+  </div>
 </div>
