--- a/src/app/forms/broker-meeting/broker-meeting.component.html
+++ b/src/app/forms/broker-meeting/broker-meeting.component.html
@@ -9,3 +9,9 @@
 <offices></offices>
 <regions-set></regions-set>
 <regions></regions>
+<countries></countries>
+<p>lobs</p>
+<p>company type</p>
+<p>operations type</p>
+<p>business type</p>
+<p>run button</p>
