--- a/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
+++ b/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
@@ -1,3 +1,13 @@
-<p>
-  fac-out-portfolio works!
-</p>
+<p>aed or treaty date</p>
+<p>date widget</p>
+<p>type of view</p>
+<p>offices</p>
+<p>region set</p>
+<p>uw lobs</p>
+<p>company type</p>
+<p>us exposed</p>
+<p>market company</p>
+<p>opeartions type</p>
+<p>business type</p>
+<p>total, remember params checkboxes</p>
+<p>run report</p>
