--- a/src/app/forms/gross-written-premium/gross-written-premium.component.html
+++ b/src/app/forms/gross-written-premium/gross-written-premium.component.html
@@ -1,3 +1,14 @@
 <p>
   gross-written-premium works!
 </p>
+
+<p>widget date</p>
+<p>offices</p>
+<p>regions set</p>
+<p>countries</p>
+<p>company type</p>
+<p>market company</p>
+<p>operations type</p>
+<p>business type</p>
+<p>total remember checkboxes</p>
+<p>run button</p>
