--- a/src/app/forms/lloyds-monitoring/lloyds-monitoring.component.html
+++ b/src/app/forms/lloyds-monitoring/lloyds-monitoring.component.html
@@ -1,3 +1,11 @@
 <p>
   lloyds-monitoring works!
 </p>
+
+<p>treaty year</p>
+<p>offices</p>
+<p>regions set</p>
+<p>regions</p>
+<p>countries</p>
+<p>total - remember</p>
+<p>run button</p>
