--- a/src/app/forms/monthly-comparison/monthly-comparison.component.html
+++ b/src/app/forms/monthly-comparison/monthly-comparison.component.html
@@ -1,3 +1,17 @@
 <p>
   monthly-comparison works!
 </p>
+
+<p>date widget</p>
+<p>type of view</p>
+<p>offices</p>
+<p>regions set</p>
+<p>regions</p>
+<p>countries</p>
+<p>uws</p>
+<p>uws lobs</p>
+<p>company type</p>
+<p>operations</p>
+<p>business type</p>
+<p>total - remember</p>
+<p>run button</p>
