--- a/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
+++ b/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
@@ -1,3 +1,18 @@
 <p>
   portfolio-analysis-report works!
 </p>
+
+<p>report by treaty year or broker</p>
+<p>treaties period</p>
+<p>reporting figures</p>
+<p>type of view</p>
+<p>offices</p>
+<p>regions set</p>
+<p>uw lobs</p>
+<p>company type</p>
+<p>primary excess or all</p>
+<p>us exposed</p>
+<p>opeartions type</p>
+<p>business type</p>
+<p>total remember params checkbox</p>
+<p>run button</p>
