--- a/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
+++ b/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
@@ -9,7 +9,9 @@
 <company-type></company-type>
 <p>operations type</p>
 <p>business type</p>
-
+<p>only total and remember checkboxes</p>
+<p>submissions count received 3-7 years checkbox</p>
+<p>run report</p>
 <button (click)="getJson()">GetJSON</button>
 
 {{json}}
