--- a/src/app/forms/underwriting-activity/underwriting-activity.component.html
+++ b/src/app/forms/underwriting-activity/underwriting-activity.component.html
@@ -1,3 +1,17 @@
 <p>
   underwriting-activity works!
 </p>
+
+<p>widget date</p>
+<p>reporting figures</p>
+<p>type of view</p>
+<p>offices</p>
+<p>regions set</p>
+<p>uws selector</p>
+<p>uws lobs</p>
+<p>primary excess</p>
+<p>company-type</p>
+<p>operations type</p>
+<p>business type</p>
+<p>total remember checkboxes</p>
+<p>run button</p>
