--- a/src/app/forms/broker-meeting/broker-meeting.component.html
+++ b/src/app/forms/broker-meeting/broker-meeting.component.html
@@ -10,8 +10,8 @@
 <regions-set></regions-set>
 <regions></regions>
 <countries></countries>
-<p>lobs</p>
-<p>company type</p>
+<lobs></lobs>
+<company-type></company-type>
 <p>operations type</p>
 <p>business type</p>
 <p>run button</p>
