--- a/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
+++ b/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
@@ -4,13 +4,13 @@
 
 <p>report by treaty year or broker</p>
 <p>treaties period</p>
-<p>reporting figures</p>
-<p>type of view</p>
-<p>offices</p>
-<p>regions set</p>
-<p>uw lobs</p>
-<p>company type</p>
-<p>primary excess or all</p>
+<reporting-figures></reporting-figures>
+<type-of-view></type-of-view>
+<offices></offices>
+<regions-set></regions-set>
+<lobs></lobs>
+<company-type></company-type>
+<primary-excess></primary-excess>
 <p>us exposed</p>
 <p>opeartions type</p>
 <p>business type</p>
