--- a/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
+++ b/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
@@ -1,10 +1,10 @@
 <p>aed or treaty date</p>
 <p>date widget</p>
-<p>type of view</p>
-<p>offices</p>
-<p>region set</p>
-<p>uw lobs</p>
-<p>company type</p>
+<type-of-view></type-of-view>
+<offices></offices>
+<regions-set></regions-set>
+<lobs></lobs>
+<company-type></company-type>
 <p>us exposed</p>
 <p>market company</p>
 <p>opeartions type</p>
