--- a/src/app/forms/underwriting-activity/underwriting-activity.component.html
+++ b/src/app/forms/underwriting-activity/underwriting-activity.component.html
@@ -3,14 +3,14 @@
 </p>
 
 <p>widget date</p>
-<p>reporting figures</p>
-<p>type of view</p>
-<p>offices</p>
-<p>regions set</p>
-<p>uws selector</p>
-<p>uws lobs</p>
-<p>primary excess</p>
-<p>company-type</p>
+<reporting-figures></reporting-figures>
+<type-of-view></type-of-view>
+<offices></offices>
+<regions-set></regions-set>
+<uw></uw>
+<lobs></lobs>
+<primary-excess></primary-excess>
+<company-type></company-type>
 <p>operations type</p>
 <p>business type</p>
 <p>total remember checkboxes</p>
