--- a/src/app/forms/gross-written-premium/gross-written-premium.component.html
+++ b/src/app/forms/gross-written-premium/gross-written-premium.component.html
@@ -3,10 +3,10 @@
 </p>
 
 <p>widget date</p>
-<p>offices</p>
-<p>regions set</p>
-<p>countries</p>
-<p>company type</p>
+<offices></offices>
+<regions-set></regions-set>
+<countries></countries>
+<company-type></company-type>
 <p>market company</p>
 <p>operations type</p>
 <p>business type</p>
