new forms added

--- a/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
+++ b/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
@@ -3,6 +3,8 @@
 <type-of-view></type-of-view>
 <offices></offices>
 <regions-set></regions-set>
+<regions></regions>
+<countries></countries>
 <lobs></lobs>
 <company-type></company-type>
 <p>us exposed</p>
