--- a/src/app/forms/lloyds-monitoring/lloyds-monitoring.component.html
+++ b/src/app/forms/lloyds-monitoring/lloyds-monitoring.component.html
@@ -3,9 +3,9 @@
 </p>
 
 <p>treaty year</p>
-<p>offices</p>
-<p>regions set</p>
-<p>regions</p>
-<p>countries</p>
+<offices></offices>
+<regions-set></regions-set>
+<regions></regions>
+<countries></countries>
 <p>total - remember</p>
 <p>run button</p>
