--- a/src/app/forms/monthly-comparison/monthly-comparison.component.html
+++ b/src/app/forms/monthly-comparison/monthly-comparison.component.html
@@ -3,14 +3,14 @@
 </p>
 
 <p>date widget</p>
-<p>type of view</p>
-<p>offices</p>
-<p>regions set</p>
-<p>regions</p>
-<p>countries</p>
-<p>uws</p>
-<p>uws lobs</p>
-<p>company type</p>
+<type-of-view></type-of-view>
+<offices></offices>
+<regions-set></regions-set>
+<regions></regions>
+<countries></countries>
+<uw></uw>
+<lobs></lobs>
+<company-type></company-type>
 <p>operations</p>
 <p>business type</p>
 <p>total - remember</p>
