compnent run-report

--- a/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
+++ b/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
@@ -12,4 +12,4 @@
 <p>opeartions type</p>
 <p>business type</p>
 <p>total, remember params checkboxes</p>
-<p>run report</p>
+<run-report></run-report>
