--- a/src/app/forms/showroom2/showroom2.component.html
+++ b/src/app/forms/showroom2/showroom2.component.html
@@ -20,7 +20,7 @@
 <p>Operations Type missing</p>
 <p>Business Type missing</p>
 <p>Extra checkboxes missing</p>
-<button class="btn btn-default">Run Report</button>
+<run-report></run-report>
 
 <hr>
 
