--- a/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
+++ b/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
@@ -11,7 +11,7 @@
 <p>business type</p>
 <p>only total and remember checkboxes</p>
 <p>submissions count received 3-7 years checkbox</p>
-<p>run report</p>
+<run-report></run-report>
 <button (click)="getJson()">GetJSON</button>
 
 {{json}}
