--- a/src/app/forms/underwriting-activity/underwriting-activity.component.html
+++ b/src/app/forms/underwriting-activity/underwriting-activity.component.html
@@ -13,5 +13,4 @@
 <company-type></company-type>
 <p>operations type</p>
 <p>business type</p>
-<p>total remember checkboxes</p>
-<p>run button</p>
+<run-report></run-report>
