components added to the forms

--- a/src/app/form-elements/extended/market-company/market-company.component.html
+++ b/src/app/form-elements/extended/market-company/market-company.component.html
@@ -1,3 +1,15 @@
-<p>
-  market-company works!
-</p>
+<div class="fieldset">
+    <div class="col-left">
+        <h4>Market Company:</h4>
+        <-- needs implementation -->
+    </div>
+    <div class="col-right">
+        <select>
+            <option value="">Select one</option>
+            <option value="">Option 1</option>
+            <option value="">Option 2</option>
+            <option value="">Option 3</option>
+        </select><br/>
+        <label> Option 1 <input type="radio"></label><label> Option 2 <input type="radio"></label><label> Option 3 <input type="radio"></label>
+    </div>
+</div>
