--- a/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
+++ b/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
@@ -8,8 +8,7 @@
 <lobs></lobs>
 <company-type></company-type>
 <p>us exposed</p>
-<p>market company</p>
+<market-company></market-company>
 <p>opeartions type</p>
 <p>business type</p>
-<p>total, remember params checkboxes</p>
 <run-report></run-report>
