--- a/src/app/forms/showroom/showroom.component.html
+++ b/src/app/forms/showroom/showroom.component.html
@@ -19,7 +19,7 @@
     <h4>Events</h4>
 
     <div class="well">
-      {{getOutput('myRadios')}}
+      {{getOutput('f1')}}
     </div>
     <button (click)="reset('f1')">reset radios</button>
 
@@ -34,7 +34,7 @@
     <h4>Events</h4>
 
     <div class="well">
-      {{getOutput('myCheckboxes')}}
+      {{getOutput('f2')}}
     </div>
 
     <button (click)="toggleVisibility('f2','one')">toggle visibility set one</button>
@@ -54,7 +54,7 @@
     <h4>Events</h4>
 
     <div class="well">
-      {{getOutput('select1')}}
+      {{getOutput('f3')}}
     </div>
     <button (click)="reset('f3')">reset multiselect</button>
 
@@ -69,9 +69,9 @@
     <h4>Events</h4>
 
     <div class="well">
-      {{getOutput('select2')}}
+      {{getOutput('f4')}}
     </div>
-    
+
     <button (click)="reset('f4')">reset select</button>
 
   </div>
